# anon-tflow

./: .gitignore  README.md  environment.yml  requirements.txt  setup.cfg
experiments/: erfc_stability.ipynb  sense_check.ipynb  tail_estimation_verification.ipynb
experiments/density_estimation_real_data/: download_data.py  generate_splits.py  results_analysis.ipynb  run_density_estimation.py
experiments/density_estimation_synthetic/: de_shift_data_exploration.ipynb  run_synthetic_density_estimation.py  synth_de_data_generation.ipynb  synthetic_analysis.ipynb
experiments/neural_network_regression/: nn_results_analysis.ipynb  run_nn_experiment.py
experiments/variational_inference_heavy_tailed_nuisance/: results.ipynb  run_vi_heavy_tailed_nuisance.py  vi_heavy_tailed_diverence_analysis.ipynb
experiments/variational_inference_logistic_regression/: run_vi_logistic_regression.py  vi_logistic_regression_analysis.ipynb
tailnflows/: plot_utils.py  torch_tails.py  utils.py
tailnflows/metrics/: __init__.py  metrics.py
tailnflows/models/: base_distribution.py  extreme_transformations.py  factored_flows.py  ffjord_flow.py  flows.py  preprocessing.py  simple_spline.py  tail_estimation.py  utils.py
tailnflows/models/comet_models/: __init__.py  comet_models.py
tailnflows/targets/: __init__.py  autoregressive.py  heavy_tailed_nuisance.py  neals_funnel.py
tailnflows/targets/data/: __init__.py  climdex.py  fama5.py  insurance.py  power.py  sp500_returns.py
tailnflows/targets/posteriordb/: diamonds.py  (+1 more)
tailnflows/train/: data_fit.py  variational_fit.py
