[metadata]
name = tailnflows
version = 0.0.1
author = Tennessee Hickling
author_email = tennessee.wallaceh@gmail.com
description = A package for running experiments related to flexible tails for normalising flows
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Tennessee-Wallaceh/tailnflows
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9